test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/allow_attr.sw
library;

#[allow(dead_code)]
pub fn ok_1() {}

#[allow(dead_code, deprecated)]
pub fn ok_2() {}

#[allow]
#[allow()]
pub fn not_ok() {}